# mysticetus-lib

./: .envrc  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE.md  README.md  rust-toolchain.toml
crates/bigquery-resources-rs/: Cargo.toml
crates/bigquery-resources-rs/src/: builders.rs  job.rs  lib.rs  query.rs  table.rs  table_data.rs  util.rs
crates/bigquery-resources-rs/src/builders/: table_field_schema.rs
crates/bigquery-resources-rs/src/job/: extract.rs  load.rs
crates/bigquery-resources-rs/src/query/: parameter_serializer.rs  results.rs  row.rs  rows.rs  value.rs
crates/bigquery-rs/: Cargo.toml  README.md  build.rs
crates/bigquery-rs/fuzz/: Cargo.toml
crates/bigquery-rs/fuzz/fuzz_targets/: zigzag.rs
crates/bigquery-rs/src/: client.rs  error.rs  lib.rs  util.rs
crates/bigquery-rs/src/dataset/: mod.rs  table_stream.rs
crates/bigquery-rs/src/job/: mod.rs
crates/bigquery-rs/src/query/: mod.rs  stream.rs
crates/bigquery-rs/src/resources/: job.rs  table.rs
crates/bigquery-rs/src/rest/: bindings.rs  client.rs  mod.rs  util.rs
crates/bigquery-rs/src/storage/: mod.rs
crates/bigquery-rs/src/table/: insert_rows.rs  mod.rs  schema_builder.rs
crates/bigquery-storage-rs/: Cargo.toml
crates/bigquery-storage-rs/fuzz/: Cargo.toml
crates/bigquery-storage-rs/fuzz/fuzz_targets/: zigzag.rs
crates/bigquery-storage-rs/src/: error.rs  lib.rs
crates/bigquery-storage-rs/src/proto/: capture.rs  encode.rs  mod.rs  schemas.rs  serializer.rs
crates/bigquery-storage-rs/src/read/: avro_de.rs  error.rs  mod.rs  session.rs  stream.rs
crates/bigquery-storage-rs/src/write/: append.rs  append_rows.rs  builder.rs  default.rs  mod.rs  schema.rs  stream_types.rs  value.rs
crates/cloud-storage/: Cargo.toml
crates/cloud-storage-2/: Cargo.toml
crates/cloud-storage-2/src/: bucket.rs  error.rs  lib.rs
crates/cloud-storage/src/: bucket.rs  client.rs  error.rs  generation.rs  get.rs  lib.rs  list.rs  read.rs  util.rs  write.rs
crates/cloud-tasks/: Cargo.toml
crates/cloud-tasks/src/: error.rs  http.rs  lib.rs  task.rs
crates/csv-stream/: Cargo.toml
crates/csv-stream/src/: buffer.rs  error.rs  lib.rs  reader.rs  row.rs  stream.rs  test_utils.rs
crates/data-export/: Cargo.toml
crates/data-export/src/: cell.rs  col_fmt.rs  content.rs  error.rs  excel_file.rs  lib.rs
crates/data-structures.lol/: Cargo.toml  run_tests.sh
crates/data-structures.lol/benches/: ordmap.rs
crates/data-structures.lol/src/: atomic_cell.rs  atomic_slot.rs  circular_buffer.rs  cursor_vec.rs  file_tree.rs  index_map.rs  lib.rs  linked_set.rs  max_only_heap.rs  maybe_owned.rs  maybe_owned_mut.rs  non_empty_vec.rs  ordmap.rs  prefetch_stream.rs  ref_set.rs  reusable_bufs.rs  ring_buffer.rs  shared.rs  shared_slab.rs  slice_deque.rs  small_str.rs  stack.rs  stack_string.rs  static_or_boxed.rs  str.rs  string_dst.rs  take_once.rs  tree.rs  visitor.rs
crates/enc-rs/: Cargo.toml
crates/enc-rs/src/: complex.rs  error.rs  lib.rs  reader.rs  slicing.rs  tag.rs  utils.rs
crates/enc-rs/tests/: test_read.rs
crates/firebase-admin/: Cargo.toml
crates/firebase-admin/src/: error.rs  lib.rs
crates/gcp-auth-channel/: Cargo.toml
crates/gcp-auth-channel/src/: future.rs  lib.rs  scope.rs
crates/gcp-auth-provider/: Cargo.toml
crates/gcp-auth-provider/src/: application_default.rs  channel.rs  client.rs  error.rs  future.rs  gcloud.rs  lib.rs  metadata.rs  project_id.rs  scope.rs  service.rs  service_account.rs  state.rs  token.rs  util.rs
crates/gcp-logging/: Cargo.toml
crates/gcp-logging/src/: env_filter.rs  http_request.rs  json_serializer.rs  lib.rs  live_ids.rs  middleware.rs  middlewarev2.rs  options.rs  payload.rs  records.rs  registry.rs  response_error.rs  severity.rs  span.rs  subscriber.rs  test_utils.rs  trace_layer.rs  types.rs  utils.rs
crates/gcr/: Cargo.toml
crates/gcr/src/: active.rs  backoff.rs  body.rs  header.rs  init.rs  lib.rs  memory.rs  retry.rs  shutdown.rs  timeout.rs
crates/geo/: Cargo.toml
crates/geo/src/: ang.rs  extent.rs  lib.rs  lng_lat.rs  normal.rs  point.rs  region.rs  simplify.rs  util.rs
crates/geojson/: Cargo.toml
crates/geojson-derive/: Cargo.toml
crates/geojson-derive/src/: lib.rs
crates/geojson/src/: collection.rs  feature.rs  geojson.rs  lib.rs  macros.rs  util.rs
crates/longrunning/: Cargo.toml
crates/longrunning/src/: lib.rs
crates/map-render/: .gitignore  Cargo.toml
crates/map-render/benches/: url_builder.rs
crates/map-render/src/: cache.rs  config.rs  coords.rs  error.rs  lib.rs  loader.rs  map_geometry.rs  tiles.rs  util.rs
crates/metadata-server/: Cargo.toml
crates/metadata-server/src/: lib.rs
crates/net-utils/: Cargo.toml
crates/net-utils/src/: backoff.rs  bidi2.rs  bidirec.rs  cloud_task_payload.rs  infallible.rs  json_stream.rs  lib.rs  once.rs  open_close.rs  retry_bidi.rs  transient.rs  util.rs
crates/path-aware-serde/: Cargo.toml
crates/path-aware-serde/src/: error.rs  json.rs  lib.rs  path.rs
crates/progress-report/: Cargo.toml
crates/progress-report/src/: builder.rs  driver.rs  lib.rs  report.rs  report_builder.rs  reporter.rs  states.rs
crates/protos/: Cargo.toml  README.md  build.rs  fs.expanded.rs
crates/protos/src/: lib.rs
crates/pubsub-rs/: Cargo.toml
crates/pubsub-rs/src/: error.rs  lib.rs  subscriber.rs  topic.rs  util.rs
crates/realtime-database/: Cargo.toml
crates/realtime-database/src/: builder.rs  client.rs  error.rs  event.rs  lib.rs  path.rs  query.rs  reference.rs  shallow.rs
crates/rest-discovery/: Cargo.toml  rest
crates/rest-discovery/src/: context.rs  doc.rs  impls.rs  ir.rs  lib.rs  string_int_visitors.rs  test.rs  type_defs.rs  types.rs
crates/serde-helpers/: Cargo.toml
crates/serde-helpers/src/: borrow.rs  debug_visitor.rs  display_error.rs  display_serialize.rs  empty_to_option.rs  find_key.rs  flat_map_ser.rs  from_str.rs  from_str_visitor.rs  inline_str_dst.rs  key_capture.rs  kvp.rs  lib.rs  macros.rs  map_error.rs  match_kvp.rs  never_visitor.rs  optional_visitor.rs  seeded_key_capture.rs  string_dst.rs  string_or_value.rs
(+366 files in other folders)
