[workspace]
members = [
    "crates/bigquery-rs",
    "crates/bigquery-resources-rs",
    "crates/bigquery-storage-rs",
    "crates/cloud-storage",
    "crates/data-export",
    "crates/env-macros",
    "crates/firestore-rs",
    "crates/gcp-auth-provider",
    "crates/gcp-logging",
    "crates/gcr",
    "crates/geo",
    "crates/geojson",
    "crates/geojson-derive",
    "crates/longrunning",
    "crates/map-render",
    "crates/net-utils",
    "crates/path-aware-serde",
    "crates/protos",
    "crates/pubsub-rs",
    "crates/progress-report",
    "crates/realtime-database",
    "crates/rest-discovery",
    "crates/serde-helpers",
    "crates/small-gcs",
    # not included so everything builds, may or may not complete
    # "crates/spanner-rs/google-sql",
    "crates/spanner-rs/spanner-rs-macros",
    "crates/spanner-rs/spanner-rs-inspect",
    "crates/timestamp",
    "crates/firebase-admin",
    "crates/csv-stream",
    "crates/cloud-tasks",
]


[workspace.package]
version = "0.0.0"

[workspace.dependencies]
rustls = "0.23"
apache-avro = "0.17"
tokio = "1.48"
tokio-util = "0.7"
axum = "0.8"
base64 = "0.21"
http = "1.3"
http-body = "1"
serde = "1"
serde_json = "1"
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tower = "0.5"
reqwest = "0.12.14"
itoa = "1"
hyper = "1.6"
url = "2.5"
ryu = "1"
jsonwebtoken = "9.3.0"
num-traits = "0.2"
memchr = "2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "1.0.50"
rand = "0.9.0"
pin-project = "1.1"
pin-project-lite = "0.2.13"
uuid = "1.5.0"
futures = "0.3"
gcp_auth = "0.12.3"
bytes = "1"
bytes-utils = "0.1.4"
prost = "0.14.1"
prost-build = "0.14.1"
rust_xlsxwriter = "0.87.0"
typenum = "1.17.0"
time = "0.3.39"
smallvec = "1.13.2"
regex = "1.11.0"
fxhash = "0.2.1"
num_cpus = "1.16.0"
parking_lot = "0.12"
paste = "1.0.15"
static-casing = { git = "https://github.com/mrudisel/static-casing" }
owned-range-bounds = { git = "https://github.com/mrudisel/owned-range-bounds" }
shared = { git = "https://github.com/mrudisel/shared", branch = "main" }
