[package]
name = "bigquery-rs"
version.workspace = true
edition = "2021"
authors = ["mrudisel"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache-avro = "0.17"
itoa.workspace = true
base64 = "0.13.0"
bytes = { workspace = true, features = ["serde"] }
const_format = { version = "0.2.22", features = ["const_generics"] }
crossbeam-epoch = "0.9.8"
crypto-common = { version = "0.1.3", features = [
    "std",
], default-features = false }
digest = { version = "0.10.3", features = ["mac", "std"] }
# data-structures = { path = "../data-structures" }
futures.workspace = true

gcp-auth-channel = { path = "../gcp-auth-channel", default-features = false }
gcp_auth = { workspace = true, features = [] }
http.workspace = true

path-aware-serde = { path = "../path-aware-serde", features = ["json"] }
pin-project-lite.workspace = true
serde-helpers = { path = "../serde-helpers" }
prost.workspace = true
protos = { path = "../protos", features = ["bigquery"] }
rand.workspace = true
reqwest = { workspace = true, features = [
    "blocking",
    "brotli",
    "deflate",
    "gzip",
    "json",
    "native-tls",
    "rustls-tls",
    "stream",
], optional = true }
serde = { workspace = true, features = ["derive"] }

serde_json.workspace = true
subtle = { version = "2.4.1" }
thiserror.workspace = true
timestamp = { path = "../timestamp" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true, features = [
    "transport",
    "tls",
    "tls-roots",
    "tls-webpki-roots",
], optional = true }
net-utils = { path = "../net-utils", optional = true, features = ["tonic"] }
tower.workspace = true

tracing.workspace = true
typed-builder = "0.10.0"
typenum.workspace = true
uuid = { workspace = true, features = ["serde", "v3", "v4", "v5"] }
num_cpus = "1.13.1"
static_assertions = "1.1.0"
hex = "0.4.3"
tokio-util = { workspace = true, features = ["io", "net", "slab", "time", "codec", "rt", "io-util"] }


[features]
default = ["storage", "rest"]

storage = ["storage-write", "storage-read"]

storage-write = ["tonic", "net-utils", "gcp-auth-channel/channel", "reqwest"]
storage-read = ["tonic", "net-utils", "gcp-auth-channel/channel"]

rest = ["reqwest"]

[dev-dependencies]
tracing-subscriber = { workspace = true, features = [
    "json",
    "parking_lot",
    "time",
] }

[build-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
# rest-discovery = { path = "../rest-discovery" }
