[package]
name = "bigquery-rs"
version.workspace = true
edition = "2024"
authors = ["mrudisel"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itoa.workspace = true
bytes = { workspace = true, features = ["serde"] }
futures.workspace = true
bigquery-resources-rs = { path = "../bigquery-resources-rs" }
gcp-auth-channel = { path = "../gcp-auth-channel", default-features = false }
http.workspace = true
path-aware-serde = { path = "../path-aware-serde", features = ["json"] }
pin-project-lite.workspace = true
serde-helpers = { path = "../serde-helpers" }
reqwest = { workspace = true, features = [
    "blocking",
    "brotli",
    "deflate",
    "gzip",
    "json",
    "native-tls",
    "rustls-tls",
    "stream",
] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
shared.workspace = true
timestamp = { path = "../timestamp" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v3", "v4", "v5"] }
static_assertions = "1.1.0"
tokio-util = { workspace = true, features = [
    "io",
    "net",
    "slab",
    "time",
    "codec",
    "rt",
    "io-util",
] }


[features]
debug-json = ["bigquery-resources-rs/debug-json"]
