[package]
name = "cloud-storage-2"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "sync"] }
protos = { path = "../protos", features = ["storage"] }
bytes.workspace = true
tonic = { workspace = true, features = [
    "transport",
    "tls",
    "tls-roots",
    "tls-webpki-roots",
] }
gcp-auth-channel = { path = "../gcp-auth-channel", features = ["channel"] }
tracing.workspace = true
cfg-if = "1.0.0"
http.workspace = true
futures.workspace = true
md5 = "0.7.0"
crc32fast = "1.3.2"
tower.workspace = true


[features]
global-client = []
