[package]
name = "cloud-storage"
version.workspace = true
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "sync"] }
protos = { path = "../protos", features = ["storage"] }
bytes.workspace = true
pin-project-lite.workspace = true
net-utils = { path = "../net-utils", features = ["tonic"] }
tonic = { workspace = true, features = ["transport", "tls-webpki-roots"] }
gcp-auth-provider.path = "../gcp-auth-provider"
tracing.workspace = true
http.workspace = true
futures.workspace = true
tower.workspace = true
crc32c = "0.6.8"
md5 = "0.7.0"
num-traits.workspace = true
tokio-util.workspace = true
bitflags = "2.9.0"

[dev-dependencies]
rand.workspace = true
