[package]
name = "data-export"
version.workspace = true
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
# data-structures = { path = "../data-structures" }
num-traits = "0.2.15"
# rust_xlsxwriter = { git = "https://github.com/mrudisel/rust_xlsxwriter", branch = "make-worksheet-sync" }

rust_xlsxwriter.workspace = true
