[package]
name = "data-export"
version.workspace = true
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
num-traits.workspace = true
rust_xlsxwriter.workspace = true
hashbrown.workspace = true
fxhash.workspace = true
