[package]
name = "data-structures"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project-lite = "0.2.9"
serde = { workspace = true, features = ["derive"], optional = true }
static_assertions = "1.1.0"
arbitrary = { version = "1.1.3", optional = true }
deepsize = { version = "0.2.0", features = ["derive"], optional = true }
smallvec = { version = "1.9.0", features = [
    "serde",
    "union",
    "const_generics",
    "const_new",
], optional = true }
parking_lot = "0.12.1"
futures = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt", "sync"], optional = true }
dashmap = { version = "5.4.0", features = ["rayon"] }
ahash = "0.8.3"
rayon = "1.6.1"
crossbeam = { version = "0.8.2", features = [
    "crossbeam-deque",
    "crossbeam-queue",
] }
bytes.workspace = true

[target.'cfg(loom)'.dependencies]
loom = { version = "0.5", features = ["checkpoint"] }


[features]
default = ["serde"]
serde = ["dep:serde"]
arbitrary = ["dep:arbitrary"]
deepsize = ["dep:deepsize"]
small-str = ["smallvec"]
small-str-write = ["smallvec/write"]
pool = ["dep:tokio"]
prefetch-stream = ["dep:tokio", "dep:futures"]
generic_const_exprs = []
ptree = []

[dev-dependencies]
rand.workspace = true
criterion = "0.3"

[[bench]]
name = "ordmap"
harness = false
