[package]
name = "firebase-admin"
edition = "2024"
version.workspace = true

[dependencies]
bytes.workspace = true
http.workspace = true
http-body.workspace = true
tower.workspace = true
fxhash.workspace = true
tokio.workspace = true
futures.workspace = true
tokio-util.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
path-aware-serde = { path = "../path-aware-serde", features = ["json"] }
thiserror.workspace = true
axum.workspace = true
jsonwebtoken.workspace = true
timestamp = { path = "../timestamp" }
gcp-auth-channel = { path = "../gcp-auth-channel" }
reqwest = { workspace = true, features = ["json"] }
tracing.workspace = true
pin-project-lite.workspace = true
