[package]
name = "gcp-auth-channel"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcp_auth.workspace = true
http.workspace = true
http-body.workspace = true
bytes.workspace = true
async-trait = "0.1.83"
serde = { workspace = true, optional = true }
serde_json = { workspace = true }
pin-project-lite.workspace = true
timestamp = { path = "../timestamp" }
thiserror.workspace = true
tokio = { workspace = true, features = ["parking_lot", "sync"] }
tonic = { workspace = true, features = [
    "tls-roots",
    "tls-webpki-roots",
], optional = true }
# data-structures = { path = "../data-structures" }
tower = { workspace = true, features = ["tracing", "timeout", "retry"] }
tower-service = { version = "0.3.1", optional = true }
tracing = { workspace = true, features = ["log", "valuable"] }
strum = { version = "0.24.1", features = ["derive"] }
futures.workspace = true
tokio-util = "0.7.11"
memchr.workspace = true

[features]
channel = ["dep:tower-service", "dep:tonic"]
retry = ["tower/retry"]
# todo: return dep:serde_json when i figure out testing
# emulator = ["dep:serde", "dep:serde_json"]
emulator = ["dep:serde"]
local-gcloud = []
