[package]
name = "gcp-logging"
version.workspace = true
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lints.rust.unexpected_cfgs]
check-cfg = ["cfg(tracing_unstable)"]
level = "warn"
priority = 0


[dependencies]
thiserror.workspace = true
axum.workspace = true
bytes.workspace = true
futures.workspace = true
http.workspace = true
http-body.workspace = true
itoa.workspace = true
ryu = "1"
serde.workspace = true
serde_json.workspace = true
parking_lot = "*"
serde-helpers = { path = "../serde-helpers" }
mime = "0.3.17"
pin-project-lite.workspace = true
path-aware-serde = { path = "../path-aware-serde" }
timestamp = { path = "../timestamp" }
tower.workspace = true
tower-http = { version = "0.5.2", features = ["trace"] }
tracing.workspace = true
tracing-core = "0.1"
tracing-subscriber = { workspace = true, features = [
    "json",
    "time",
    "parking_lot",
] }
uuid = { workspace = true, features = ["serde", "v3", "v4", "v5"] }
rand.workspace = true
hex = "0.4.3"
smallvec = { version = "1.13.2", features = [
    "union",
    "serde",
    "const_new",
    "const_generics",
] }
sharded-slab = "0.1.7"
memchr = "2.7.2"
fxhash = "0.2.1"
dashmap = { version = "5.5.3", features = ["inline", "serde", "raw-api"] }
anyhow = { version = "1.0.82", features = ["backtrace"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-queue"] }
simd-json = "0.15.1"
tokio = { workspace = true, features = ["rt", "macros", "time"] }

valuable = { version = "0.1", optional = true }
valuable-serde = { version = "0.1", optional = true }
slab = "0.4.10"
hashbrown = "0.15.4"
# [target.'cfg(tracing_unstable)'.dependencies.valuable]
# optional = true
# version = "0.1"

# [target.'cfg(tracing_unstable)'.dependencies.valuable-serde]
# optional = true
# version = "0.1"

[dev-dependencies]

[features]
default = ["valuable", "deadlock"]
debug-logging = []
valuable = [
    "dep:valuable",
    "dep:valuable-serde",
    "tracing/valuable",
    "tracing-subscriber/valuable",
]
deadlock = ["parking_lot/deadlock_detection"]
