[package]
name = "gcr"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
axum = { workspace = true, features = [] }
bytes.workspace = true
tokio = { workspace = true, features = ["signal", "time", "fs", "macros"] }
tower-layer = "0.3.2"
tower-service = "0.3.2"
http.workspace = true
http-body.workspace = true
pin-project-lite.workspace = true
gcp-logging = { path = "../gcp-logging" }
tracing.workspace = true
futures.workspace = true
timestamp = { path = "../timestamp" }
itoa.workspace = true
rand.workspace = true
reqwest = { workspace = true, optional = true }
anyhow = { version = "1", optional = true }

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]
anyhow = ["dep:anyhow"]
