[package]
name = "geo"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deepsize = { version = "0.2.0", optional = true }
nalgebra = { version = "0.30.1", features = ["macros"], optional = true }
rand = { version = "0.8.5", optional = true }
rstar = "0.12.0"
serde = { workspace = true, features = ["derive"] }
static_assertions = "1.1.0"
typenum.workspace = true
# data-structures = { path = "../data-structures" }
aide = { version = "0.10.0", features = ["macros"], optional = true }
schemars = { version = "0.8.11", optional = true }


[dev-dependencies]
num-iter = { version = "0.1.42", features = ["i128"] }
plotters = "0.3.1"
rand.workspace = true


[features]
deepsize = ["dep:deepsize"]
random-geom = ["rand"]
aide = ["dep:aide", "dep:schemars"]
normal = ["dep:nalgebra"]
