[package]
name = "geojson-derive"
version.workspace = true
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.18"
syn = { version = "1.0.92", features = ["visit", "visit-mut"] }
proc-macro2 = "1.0"
