[package]
name = "map-render"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "url_builder"
harness = false
required-features = ["benchmarking"]

[features]
default = ["axum"]
axum = ["dep:axum", "dep:serde", "dep:serde_json"]
benchmarking = []

[dependencies]
bytes.workspace = true
png = "0.17.7"
reqwest.workspace = true
thiserror.workspace = true
tiny-skia = "0.11.3"
itoa.workspace = true
tokio = { workspace = true, features = [
    "sync",
    "macros",
    "time",
    "fs",
    "parking_lot",
    "rt-multi-thread",
] }
geojson = { path = "../geojson" }
geo = { path = "../geo" }
futures.workspace = true
mime_guess = "2.0.4"
pin-project-lite = "0.2.9"
rand.workspace = true
threadpool = "1.8"
small-gcs = { version = "0.1.0", path = "../small-gcs" }
arrayvec = "0.7.2"
tracing.workspace = true
gcp-auth-provider.path = "../gcp-auth-provider"
axum = { workspace = true, optional = true, features = [] }
serde_json = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
typed-builder = "0.14.0"
image = "0.24.6"
shared.workspace = true

[dev-dependencies]
criterion = "0.5.1"
tracing-subscriber = "0.3.16"
