[package]
name = "metadata-server"
edition = "2021"
version.workspace = true

[dependencies]
hyper = { workspace = true, features = ["client", "nightly"] }
http.workspace = true
http-body.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
path-aware-serde = { path = "../path-aware-serde", features = ["json"] }
tokio = { workspace = true, features = ["rt", "sync", "parking_lot", "time"] }
pin-project-lite.workspace = true
bytes.workspace = true
