[package]
name = "net-utils"
version.workspace = true
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tonic = { workspace = true, optional = true }
tower = { workspace = true, features = ["retry"], optional = true }
pin-project-lite.workspace = true
bytes.workspace = true
serde_json.workspace = true
serde.workspace = true
rand.workspace = true
tracing.workspace = true
thiserror.workspace = true
timestamp = { path = "../timestamp" }
http.workspace = true
axum.workspace = true
num-traits.workspace = true
tokio-util.workspace = true
phf = { version = "0.11.3", features = ["macros"] }
path-aware-serde = { path = "../path-aware-serde", features = ["json"] }

[features]
tower = ["dep:tower"]
tonic = ["dep:tonic", "tower"]
